examples/resources/awscc_rtbfabric_responder_gateway/rtbfabric_responder_gateway.tf
resource "awscc_rtbfabric_responder_gateway" "example" {
  domain_name     = "example.rtbfabric.local"
  security_groups = [aws_security_group.example.id]
  subnet_ids      = [aws_subnet.example.id]
}

resource "aws_vpc" "example" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_security_group" "example" {
  name_prefix = "rtb-fabric-sg"
  vpc_id      = aws_vpc.example.id

  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.example.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_subnet" "example" {
  vpc_id            = aws_vpc.example.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = data.aws_availability_zones.available.names[0]
}

data "aws_availability_zones" "available" {
  state = "available"
}
